# poc-forms

./: pyproject.toml
poc/form_test/: forms.py  urls.py  views.py
poc/form_test/templates/form_test/: form.html
poc/poc/: settings.py  urls.py
tests/: test_poc_form_multiples_forms.py
